# ch32v305

./: .gitignore  README.md
ch32v305_01_led/: CMakeLists.txt
ch32v305_01_led/src/bsp/device/: debug.c
ch32v305_01_led/src/bsp/ldscript/: ch32v305.ld
ch32v305_02_uart/: CMakeLists.txt
ch32v305_02_uart/src/ap/: ap.c
ch32v305_02_uart/src/bsp/device/: sysmem.c
ch32v305_02_uart/src/hw/: hw.c  hw_def.h
ch32v305_02_uart/src/hw/driver/: uart.c
ch32v305_03_tinyusb/: CMakeLists.txt
ch32v305_03_tinyusb/src/ap/: ap.c
ch32v305_03_tinyusb/src/bsp/: bsp.c
ch32v305_03_tinyusb/src/hw/: hw.c  hw.h
ch32v305_03_tinyusb/src/hw/driver/: vcp.c
ch32v305_04_usb/: CMakeLists.txt
ch32v305_04_usb/src/: main.c
ch32v305_04_usb/src/ap/: ap.c
ch32v305_04_usb/src/bsp/: bsp.c
ch32v305_04_usb/src/bsp/ldscript/: ch32v305.ld
ch32v305_04_usb/src/common/hw/include/: uart.h
ch32v305_04_usb/src/hw/: hw.c  hw.h  hw_def.h
ch32v305_04_usb/src/hw/driver/: led.c  uart.c  vcp.c
ch32v305_04_usb/src/hw/driver/usb/: usb.c  usb.h
ch32v305_04_usb/src/hw/driver/usb/cdc/: usbhs_cdc.c  usbhs_cdc.h  usbhs_desc.c  usbhs_device.c  usbhs_device.h
ch32v305_05_flash/src/: main.c
ch32v305_05_flash/src/bsp/: bsp.c
ch32v305_05_flash/src/bsp/ldscript/: ch32v305.ld
ch32v305_05_flash/src/common/: def.h
ch32v305_05_flash/src/hw/: hw.c  hw.h  hw_def.h
ch32v305_05_flash/src/hw/driver/: flash.c
ch32v305_06_boot/: CMakeLists.txt
ch32v305_06_boot/src/ap/: ap.c  ap_def.h
ch32v305_06_boot/src/ap/boot/: boot.c
ch32v305_06_boot/src/bsp/: bsp.c  bsp.h
ch32v305_06_boot/src/bsp/device/: ch32v30x_it.h  syscalls.c
ch32v305_06_boot/src/common/: def.h
ch32v305_06_boot/src/hw/: hw.c  hw.h  hw_def.h
ch32v305_07_fw/: CMakeLists.txt
ch32v305_07_fw/src/ap/: ap.c
ch32v305_07_fw/src/hw/: hw.c  hw.h  hw_def.h
ch32v305_07_fw/tools/mac/: ch32v30x_loader
ch32v305_fw/: CMakeLists.txt
ch32v305_fw/src/bsp/: bsp.c  bsp.h
ch32v305_fw/tools/: toolchain.cmake
ch32v30x_loader/: CMakeLists.txt  README.md
ch32v30x_loader/src/ap/: ap.c
(+26 files in other folders)
